WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
215513
Fix bad check in AudioBufferSourceNode::renderFromBuffer()
https://bugs.webkit.org/show_bug.cgi?id=215513
Summary
Fix bad check in AudioBufferSourceNode::renderFromBuffer()
Chris Dumez
Reported
2020-08-14 10:35:29 PDT
Fix bad check in AudioBufferSourceNode::renderFromBuffer() that is causing us to incorrectly output silence and failing many WPT tests.
Attachments
Patch
(69.06 KB, patch)
2020-08-14 10:38 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(69.05 KB, patch)
2020-08-14 10:46 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2020-08-14 10:38:06 PDT
Created
attachment 406602
[details]
Patch
Darin Adler
Comment 2
2020-08-14 10:43:43 PDT
Comment on
attachment 406602
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=406602&action=review
> Source/WebCore/Modules/webaudio/AudioBufferSourceNode.cpp:249 > + if (fabs(pitchRate) > virtualDeltaFrames)
std::abs is better than fabs
Chris Dumez
Comment 3
2020-08-14 10:46:59 PDT
Created
attachment 406605
[details]
Patch
EWS
Comment 4
2020-08-14 11:27:15 PDT
Committed
r265683
: <
https://trac.webkit.org/changeset/265683
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 406605
[details]
.
Radar WebKit Bug Importer
Comment 5
2020-08-14 11:28:19 PDT
<
rdar://problem/67085393
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug